# Traverso-DAW

./: CMakeLists.txt  TODO
resources/: shortcuts.ini
resources/themes/: parchment.xml  traversolight.xml
src/: precompile.h
src/audiofileio/: CMakeLists.txt
src/audiofileio/decode/: AbstractAudioReader.cpp  AbstractAudioReader.h  FlacAudioReader.cpp  FlacAudioReader.h  MadAudioReader.cpp  MadAudioReader.h  ResampleAudioReader.cpp  ResampleAudioReader.h  SFAudioReader.cpp  SFAudioReader.h  VorbisAudioReader.cpp  VorbisAudioReader.h  WPAudioReader.cpp  WPAudioReader.h
src/audiofileio/encode/: AbstractAudioWriter.cpp  AbstractAudioWriter.h  FlacAudioWriter.cpp  LameAudioWriter.cpp  SFAudioWriter.cpp  SFAudioWriter.h  VorbisAudioWriter.cpp  WPAudioWriter.cpp  WPAudioWriter.h
src/commands/: AddRemove.cpp  AddRemove.h  ArmTracks.cpp  ArmTracks.h  ArrowKeyBrowser.cpp  ArrowKeyBrowser.h  AudioClipExternalProcessing.cpp  CMakeLists.txt  ClipSelection.cpp  ClipSelection.h  CommandGroup.cpp  CommandGroup.h  Crop.cpp  Crop.h  ExternalProcessingDialog.cpp  ExternalProcessingDialog.h  Fade.cpp  Fade.h  Gain.cpp  Gain.h  Import.cpp  Import.h  MoveClip.cpp  MoveClip.h  MoveCommand.cpp  MoveCommand.h  MoveCurveNode.cpp  MoveCurveNode.h  MoveEdge.cpp  MoveEdge.h  MoveMarker.cpp  MoveMarker.h  MovePlugin.cpp  MovePlugin.h  MoveTrack.cpp  MoveTrack.h  PCommand.cpp  PCommand.h  PlayHeadMove.cpp  PlayHeadMove.h  (+19 more)
src/commands/plugins/TraversoCommands/: CMakeLists.txt  TraversoCommands.cpp  TraversoCommands.h
src/common/: APILinkedList.h  Debugger.cpp  Debugger.h  Mixer.cpp  Resampler.cpp  Resampler.h  RingBuffer.cpp  RingBufferNPT.h  Tsar.cpp  Tsar.h  Utils.cpp  Utils.h  defines.h  fpu.cc
src/core/: AbstractViewPort.cpp  AbstractViewPort.h  AudioClip.cpp  AudioClip.h  AudioClipGroup.cpp  AudioClipGroup.h  AudioClipManager.cpp  AudioClipManager.h  AudioFileCopyConvert.cpp  AudioFileCopyConvert.h  AudioFileMerger.cpp  AudioSource.cpp  AudioSource.h  AudioTrack.cpp  AudioTrack.h  CMakeLists.txt  CommandPlugin.h  ContextItem.cpp  ContextItem.h  ContextPointer.cpp  ContextPointer.h  Curve.cpp  Curve.h  CurveNode.cpp  CurveNode.h  DiskIO.cpp  DiskIO.h  Export.cpp  Export.h  FadeCurve.cpp  FadeCurve.h  FileHelpers.cpp  FileHelpers.h  Information.cpp  Information.h  Marker.cpp  Marker.h  Peak.cpp  Peak.h  ProcessingData.cpp  (+38 more)
src/engine/: AlsaDriver.cpp  AlsaDriver.h  AudioBus.cpp  AudioBus.h  AudioChannel.cpp  AudioChannel.h  AudioDevice.cpp  AudioDevice.h  AudioDeviceThread.cpp  AudioDeviceThread.h  CMakeLists.txt  JackDriver.cpp  JackDriver.h  PADriver.cpp  PADriver.h  PulseAudioDriver.cpp  PulseAudioDriver.h  TAudioDeviceClient.cpp  TAudioDeviceClient.h  TAudioDriver.cpp  TAudioDriver.h  memops.cpp  memops.h
src/plugins/: CMakeLists.txt  Plugin.cpp  Plugin.h  PluginChain.cpp  PluginChain.h  PluginManager.cpp  PluginManager.h  PluginPropertiesDialog.cpp  PluginSlider.cpp  PluginSlider.h
src/plugins/LV2/: LV2Plugin.cpp  LV2Plugin.h
src/plugins/native/: CorrelationMeter.cpp  CorrelationMeter.h  GainEnvelope.cpp  GainEnvelope.h  SpectralMeter.cpp  SpectralMeter.h
src/sheetcanvas/: AudioClipView.cpp  AudioClipView.h  AudioTrackView.cpp  AudioTrackView.h  CMakeLists.txt  ClipsViewPort.cpp  ClipsViewPort.h  Cursors.cpp  Cursors.h  CurveNodeView.cpp  CurveNodeView.h  CurveView.cpp  CurveView.h  FadeCurveView.cpp  FadeCurveView.h  LineView.cpp  LineView.h  MarkerView.cpp  MarkerView.h  PluginChainView.cpp  PluginChainView.h  PluginView.cpp  PluginView.h  PositionIndicator.cpp  PositionIndicator.h  SheetView.cpp  SheetView.h  SheetWidget.cpp  SheetWidget.h  TAudioProcessingNodeView.h  TBusTrackView.cpp  TCanvasCursor.cpp  TCanvasCursor.h  TKnobView.cpp  TKnobView.h  TTextView.cpp  TTextView.h  TTrackLaneView.cpp  TTrackLaneView.h  TimeLineView.cpp  (+14 more)
src/sheetcanvas/dialogs/: AudioClipEditDialog.cpp  AudioClipEditDialog.h  AudioClipEditDialog.ui  TTrackManagerDialog.cpp  TTrackManagerDialog.h  TTrackManagerDialog.ui
src/traverso/: CMakeLists.txt  Main.cpp  TMainWindow.cpp  TMainWindow.h  TTransport.cpp  TTransport.h  Traverso.cpp
src/traverso/dialogs/: CDWritingDialog.cpp  CDWritingDialog.h  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  InsertSilenceDialog.cpp  MarkerDialog.cpp  MarkerDialog.h  PluginSelectorDialog.cpp  PluginSelectorDialog.h  RestoreProjectBackupDialog.cpp  TShortcutEditorDialog.cpp  TShortcutEditorDialog.h  TShortcutEditorDialog.ui  TTrackSelector.cpp  ThemeModifierDialog.cpp
src/traverso/dialogs/project/: ImportClipsDialog.cpp  ImportClipsDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  NewProjectDialog.ui  NewSheetDialog.cpp  NewSheetDialog.h  NewTrackDialog.cpp  NewTrackDialog.h  NewTrackDialog.ui  OpenProjectDialog.cpp  ProjectManagerDialog.cpp  ProjectManagerDialog.h  ProjectManagerDialog.ui
src/traverso/dialogs/settings/: AudioDriverConfigPage.ui  BehaviorConfigPage.ui  KeyboardConfigPage.ui  Pages.cpp  Pages.h  PerformanceConfigPage.ui  SettingsDialog.cpp
src/traverso/widgets/: BusMonitor.cpp  CorrelationMeterWidget.cpp  CorrelationMeterWidget.h  ExportFormatOptionsWidget.cpp  ExportFormatOptionsWidget.h  ExportFormatOptionsWidget.ui  InfoWidgets.cpp  InfoWidgets.h  MessageWidget.cpp  MeterWidget.cpp  ResourcesWidget.cpp  ResourcesWidget.h  ResourcesWidget.ui  SpectralMeterWidget.cpp  SpectralMeterWidget.h  TContextHelpWidget.cpp  TContextHelpWidget.h  TSessionTabWidget.cpp  TSessionTabWidget.h  TransportConsoleWidget.cpp  TransportConsoleWidget.h  VUMeter.cpp  VUMeter.h  WelcomeWidget.cpp
