INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}/src/traverso
${CMAKE_SOURCE_DIR}/src/common
${CMAKE_SOURCE_DIR}/src/core
${CMAKE_SOURCE_DIR}/src/sheetcanvas
${CMAKE_SOURCE_DIR}/src/commands
${CMAKE_SOURCE_DIR}/src/plugins
${CMAKE_SOURCE_DIR}/src/plugins/native
)

SET(TRAVERSO_COMMAND_PLUGIN_SOURCES
TraversoCommands.cpp
)

SET(TRAVERSO_TRAVERSO_COMMANDS_MOC_CLASSES
TraversoCommands.h
)
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_STATICPLUGIN)


SET(TRAVERSO_COMMAND_PLUGIN_LIBRARY "tcp_traversocommands")


ADD_LIBRARY(${TRAVERSO_COMMAND_PLUGIN_LIBRARY} STATIC ${TRAVERSO_COMMAND_PLUGIN_SOURCES})

IF(USE_PCH)
    ADD_DEPENDENCIES(tcp_traversocommands precompiled_headers)
ENDIF(USE_PCH)
